creating group if not existing
