# vip-portal/src/main/webapp/api-doc/internal-api-doc.json
@@ -287,6 +287,88 @@
         }
       }
     },
+    "/files/{id}/content" : {
+      "get" : {
+        "tags" : [ "node-controller" ],
+        "operationId" : "getFileContent",
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "500" : {
+            "description" : "Internal Server Error",
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ErrorCodeAndMessage"
+                }
+              }
+            }
+          },
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "type" : "string",
+                  "format" : "byte"
+                }
+              }
+            }
+          }
+        }
+      },
+      "put" : {
+        "tags" : [ "node-controller" ],
+        "operationId" : "putFileContent",
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "type" : "string",
+                "format" : "byte"
+              }
+            }
+          },
+          "required" : true
+        },
+        "responses" : {
+          "500" : {
+            "description" : "Internal Server Error",
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ErrorCodeAndMessage"
+                }
+              }
+            }
+          },
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/EntryResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/applications/{id}" : {
       "get" : {
         "tags" : [ "application-controller" ],
@@ -784,6 +866,44 @@
         }
       }
     },
+    "/entries" : {
+      "post" : {
+        "tags" : [ "node-controller" ],
+        "operationId" : "createEntry",
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/CreateEntryRequest"
+              }
+            }
+          },
+          "required" : true
+        },
+        "responses" : {
+          "500" : {
+            "description" : "Internal Server Error",
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ErrorCodeAndMessage"
+                }
+              }
+            }
+          },
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/EntryResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/boutiques/check" : {
       "post" : {
         "tags" : [ "boutiques-controller" ],
@@ -1009,6 +1129,113 @@
         }
       }
     },
+    "/entries/{id}" : {
+      "get" : {
+        "tags" : [ "node-controller" ],
+        "operationId" : "getEntry",
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "500" : {
+            "description" : "Internal Server Error",
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ErrorCodeAndMessage"
+                }
+              }
+            }
+          },
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/EntryResponse"
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete" : {
+        "tags" : [ "node-controller" ],
+        "operationId" : "deleteEntry",
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "500" : {
+            "description" : "Internal Server Error",
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ErrorCodeAndMessage"
+                }
+              }
+            }
+          },
+          "200" : {
+            "description" : "OK"
+          }
+        }
+      },
+      "patch" : {
+        "tags" : [ "node-controller" ],
+        "operationId" : "patchEntry",
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/UpdateEntryRequest"
+              }
+            }
+          },
+          "required" : true
+        },
+        "responses" : {
+          "500" : {
+            "description" : "Internal Server Error",
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ErrorCodeAndMessage"
+                }
+              }
+            }
+          },
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/EntryResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/tags" : {
       "get" : {
         "tags" : [ "tag-controller" ],
@@ -1052,6 +1279,53 @@
               "*/*" : {
                 "schema" : {
                   "$ref" : "#/components/schemas/PrecisePageTag"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/entries/{id}/children" : {
+      "get" : {
+        "tags" : [ "node-controller" ],
+        "operationId" : "listChildren",
+        "parameters" : [ {
+          "name" : "id",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "refresh",
+          "in" : "query",
+          "required" : false,
+          "schema" : {
+            "type" : "boolean",
+            "default" : false
+          }
+        } ],
+        "responses" : {
+          "500" : {
+            "description" : "Internal Server Error",
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ErrorCodeAndMessage"
+                }
+              }
+            }
+          },
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "type" : "array",
+                  "items" : {
+                    "$ref" : "#/components/schemas/EntryResponse"
+                  }
                 }
               }
             }
@@ -1181,6 +1455,36 @@
           }
         }
       },
+      "EntryResponse" : {
+        "type" : "object",
+        "properties" : {
+          "id" : {
+            "type" : "string"
+          },
+          "name" : {
+            "type" : "string"
+          },
+          "directory" : {
+            "type" : "boolean"
+          },
+          "length" : {
+            "type" : "integer",
+            "format" : "int64"
+          },
+          "modificationDate" : {
+            "type" : "string"
+          },
+          "permissions" : {
+            "type" : "string"
+          },
+          "replicas" : {
+            "type" : "array",
+            "items" : {
+              "type" : "string"
+            }
+          }
+        }
+      },
       "Application" : {
         "type" : "object",
         "properties" : {
@@ -1259,14 +1563,14 @@
           "note" : {
             "type" : "string"
           },
+          "descriptorFilename" : {
+            "type" : "string"
+          },
           "resourcesNames" : {
             "type" : "array",
             "items" : {
               "type" : "string"
             }
-          },
-          "descriptorFilename" : {
-            "type" : "string"
           }
         }
       },
@@ -1324,6 +1628,37 @@
           "userlevel" : {
             "type" : "string",
             "enum" : [ "Beginner", "Advanced", "Developer", "Administrator" ]
+          }
+        }
+      },
+      "CreateEntryRequest" : {
+        "type" : "object",
+        "properties" : {
+          "parentId" : {
+            "type" : "string"
+          },
+          "name" : {
+            "type" : "string"
+          },
+          "type" : {
+            "type" : "string"
+          },
+          "content" : {
+            "type" : "string"
+          }
+        }
+      },
+      "UpdateEntryRequest" : {
+        "type" : "object",
+        "properties" : {
+          "newPath" : {
+            "type" : "string"
+          },
+          "newName" : {
+            "type" : "string"
+          },
+          "extendPath" : {
+            "type" : "boolean"
           }
         }
       },
